--- a/DS/makefile
+++ b/DS/makefile
@@ -39,14 +39,14 @@ dic5:
 dic6:
 	cd $(BIN); java $(PACKAGE)2/RedeP2P --id 6 --listenPort 5000
 
-rotm1:
-	cd $(BIN); $(PACKAGE)3/ROTM --id 1 --listenPort 5000 --ip l117,l118,l119
-rotm2:
-	cd $(BIN); $(PACKAGE)3/ROTM --id 2 --listenPort 5000 --ip l116,l118,l119
-rotm3:
-	cd $(BIN); $(PACKAGE)3/ROTM --id 3 --listenPort 5000 --ip l116,l117,l119
-rotm4:
-	cd $(BIN); $(PACKAGE)3/ROTM --id 4 --listenPort 5000 --ip l116,l117,l118
+rtom1:
+	cd $(BIN); java $(PACKAGE)3/RTOM --id 1 --listenPort 5000 --ip l117,l118,l119
+rtom2:
+	cd $(BIN); java $(PACKAGE)3/RTOM --id 2 --listenPort 5000 --ip l116,l118,l119
+rtom3:
+	cd $(BIN); java $(PACKAGE)3/RTOM --id 3 --listenPort 5000 --ip l116,l117,l119
+rtom4:
+	cd $(BIN); java $(PACKAGE)3/RTOM --id 4 --listenPort 5000 --ip l116,l117,l118
 
 checkDir:
 	mkdir -p $(BIN)
