--- a/DS/makefile
+++ b/DS/makefile
@@ -2,7 +2,7 @@ SRC := ./src/
 BIN := ./bin/
 LOG := ./log/
 
-PART_3_MACHINES := l116 l117 l118 l119
+PART_3_MACHINES := l116,l117,l118,l119
 
 PORT := $(PORT)
 
