--- a/DS/makefile
+++ b/DS/makefile
@@ -2,7 +2,7 @@ SRC := src/
 BIN := bin/
 LOG := log/
 
-PART_2_MACHINES := l116,l117,l118,l120
+PART_2_MACHINES := l116,l117,l118,l119,l120,l121
 PART_3_MACHINES := l116,l117,l118,l119
 
 PORT := 5000
